--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fas fa-envelope"></i>asal.asgari19@gmail.com</li>
+                    <li class="email"><i class="fas fa-envelope"></i><a href="mailto: asal.asgari19@gmail.com">asal.asgari19@gmail.com</a></li>
                     <li class="github"><i class="fab fa-github"></i><a href="https://github.com/asal97" target="_blank">github.com/asal97</a></li>
                     <li ><i class="fas fa-brain"></i>My academic project can be found in my github page make sure to check them out ^_^</li>
 
