Refree Added, Certficates ,...

--- a/index.html
+++ b/index.html
@@ -29,23 +29,22 @@
                 <h3 class="tagline">Computer Engineering Student</h3>
             </div><!--//profile-container-->
 
-            <div class="contact-container container-block">
-                <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fas fa-envelope"></i><a href="mailto: asal.asgari19@gmail.com">asal.asgari19@gmail.com</a></li>
-                    <li class="github"><i class="fab fa-github"></i><a href="https://github.com/asal97" target="_blank">github.com/asal97</a></li>
-                    <li ><i class="fas fa-brain"></i>My academic project can be found in my github page make sure to check them out ^_^</li>
-
-
-                </ul>
-            </div>
 
             <!--//contact-container-->
-            <div class="education-container container-block">
-                <h2 class="container-block-title">Personal Information</h2>
-                <div class="item">
-                    <h4 class="degree">Date of birth : <span class="time">1997/10/17</span> </h4>
+            <div class="contact-container container-block">
+                 <ul class="list-unstyled contact-list">
+                    <li class="email"><i class="fas fa-envelope"></i><a href="mailto: asal.asgari19@gmail.com">asal.asgari19@gmail.com</a></li>
+                     <li class="email"><i class="fas fa-globe"></i><a href="https://asal97.github.io/CV/" target="_blank"> https://asal97.github.io/CV/</a></li>
+                     <li class="github"><i class="fab fa-github"></i><a href="https://github.com/asal97" target="_blank">github.com/asal97</a></li>
+                     <li class="email"><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/asal-asgari-aa66a019a/" target="_blank"> Linkedin Account</a></li>
+                     <br>
+                    <li class="email"><i class="fas fa-bookmark"></i> My academic project can be found in my github page make sure to check them out ^_^</li>
 
-                </div><!--//item-->
+
+
+
+ </ul>
+                <!--//item-->
             </div><!--//education-container-->
 
             <div class="languages-container container-block">
@@ -110,7 +109,7 @@
 
           <!--//item-->
           <section class="section experiences-section">
-              <h2 class="section-title"><span class="icon-holder"><i class="fas fa-award"></i></span>Awards and Honors</h2>
+              <h2 class="section-title"><span class="icon-holder"><i class="fas fa-award"></i></span>Certificates and Honors</h2>
 
               <div class="item">
                   <div class="meta">
@@ -127,6 +126,18 @@
 
                   </div></div><!--//meta-->
               </div><!--//item-->
+
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">Requirement for the Android Pack Certificate</h3>
+                          <div class="time">april 2017</div>
+                      </div><!--//upper-row-->
+
+                      <div class="company"><span class="text-info">Tehran Institute of Technology</span>
+                           <li><a href="assets/images/AndroidPack.jpg">View Certificate</a></li></ul>
+                  </div></div><!--//meta-->
+              </div>
 
               <div class="item">
                   <div class="meta">
@@ -300,8 +311,8 @@
                         </div><!--//upper-row-->
                         <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> Allame Helli 5 Highschool Website</strong></a>, Tehran, Iran
                 </div>
-                <ul><li class="text-info"><strong>This project is still under construction for more information you can check out our github repository with this
-                   <a href="https://github.com/TheMn/internet-engineering-project">link</a>
+                <ul><li class="text-info"><strong>
+                   <a href="https://github.com/TheMn/internet-engineering-project">Project Repository</a>
                 </strong></li></ul>
                     </div>
                   </div>
@@ -339,6 +350,8 @@
                             <div class="time">November 14th</div>
                         </div><!--//upper-row-->
                         <div class="company"><strong><span class="text-info">Guilan University Programming Contest 2019</span>, University of Guilan</strong> , Rasht , Iran</div>
+
+                             <ul> <li><a href="assets/images/ExecutiveCommitte.jpg">View Certificate</a></li></ul>
                     </div><!--//meta-->
                 </div><!--//item-->
 
@@ -348,7 +361,14 @@
                             <h3 class="job-title">Member and The Lead singer of <em class="text-info">Recitatif</em> music band</h3>
                             <div class="time">spring of 2019 - Present</div>
                         </div><!--//upper-row-->
-                        <div class="company">Rasht , Guilan , Iran</div>
+                        <div class="company"><span class="text-info">Shaghayegh music academy</span>, Rasht , Iran</div>
+                        <div class="company"><i class="fas fa-arrow-down"></i> <span class="text-info">Few of my performances</span></div>
+                        <ul>
+                            <li><a href="https://www.instagram.com/p/BmJep8LnWKp/">Solo (Hello Cover)</a></li>
+                            <li><a href="https://www.instagram.com/p/B5nz6BRlJ5e/">Solo (I dont wanna be you Cover)</a></li>
+                            <li><a href="https://www.instagram.com/p/BwkpAsvlNIU/">Group Gathering practice performance</a></li>
+                            </li>
+                        </ul>
                     </div><!--//meta-->
                 </div><!--//item-->
 
@@ -366,14 +386,14 @@
                   <!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">JAVA </h3>
+                        <h3 class="level-title">Python </h3>
                         <div class="progress level-bar">
 						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Python</h3>
+                        <h3 class="level-title">Java</h3>
                         <div class="progress level-bar">
                     <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -476,6 +496,18 @@
                 <li class="email"><i class="fas fa-envelope"></i>   shahbahrami@guilan.ac.ir</li>
                 <li class="email"><i class="fas fa-envelope"></i>   shahbahrami1@gmail.com</li>
                         <li class="email"><i class="fas fa-globe"></i> <a href="https://staff.guilan.ac.ir/shahbahrami/" target="_blank">https://staff.guilan.ac.ir/shahbahrami/</a> </li>
+
+                    </div>
+                  </div>
+        <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Dr. Mahdi Aminian</h3>
+                        </div><!--//upper-row-->
+                        <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan
+                </div>
+                <li class="email"><i class="fas fa-envelope"></i>   mahdi.aminian@guilan.ac.ir</li>
+                        <li class="email"><i class="fas fa-globe"></i> <a href="https://staff.guilan.ac.ir/mahdiaminian/" target="_blank">https://staff.guilan.ac.ir/mahdiaminian/</a> </li>
 
                     </div>
                   </div>
