simple touch up

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                       </div><!--//upper-row-->
 
                       <div class="company"><span class="text-info">Tehran Institute of Technology</span>
-                           <li><a href="assets/images/AndroidPack.jpg">View Certificate</a></li></ul>
+                           <ul><li><a href="assets/images/AndroidPack.jpg">View Certificate</a></li></ul>
                   </div></div><!--//meta-->
               </div>
 
