Hobbies added, Date edited.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <div class="contact-container container-block">
                  <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fas fa-envelope"></i><a href="mailto: asal.asgari19@gmail.com">asal.asgari19@gmail.com</a></li>
+
                      <li class="email"><i class="fas fa-globe"></i><a href="https://asal97.github.io/CV/" target="_blank"> https://asal97.github.io/CV/</a></li>
                      <li class="github"><i class="fab fa-github"></i><a href="https://github.com/asal97" target="_blank">github.com/asal97</a></li>
                      <li class="email"><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/asal-asgari-aa66a019a/" target="_blank"> Linkedin Account</a></li>
@@ -57,10 +58,11 @@
             </div><!--//interests-->
 
             <div class="interests-container container-block">
-                <h2 class="container-block-title">Interests</h2>
+                <h2 class="container-block-title">Hobbies and Interests</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>Music</li>
-                    <li>Languages</li>
+                    <li>Playing guitar</li>
+                    <li>Learning a new skill</li>
+                    <li>Reading novels</li>
                 </ul>
             </div><!--//interests-->
 
@@ -74,7 +76,7 @@
                   <div class="meta">
                       <div class="upper-row">
                           <h3 class="job-title">B.Sc in Computer Engineering</h3>
-                          <div class="time">sep.2016 - july.2020(Expected)</div>
+                          <div class="time">Sep.2016 - Jul.2020(Expected)</div>
                       </div><!--//upper-row-->
                       <div class="company"><strong>University of Guilan</strong> , Rasht , Iran
 <br>
@@ -89,7 +91,7 @@
                   <div class="meta">
                       <div class="upper-row">
                           <h3 class="job-title">Mathematics and Physics Diploma</h3>
-                          <div class="time">oct.2012 - sep.2016</div>
+                          <div class="time">Oct.2012 - Sep.2016</div>
                       </div><!--//upper-row-->
                       <div class="company"><strong>Professor Reza Highschool</strong> , Rasht , Iran
                         <br>
@@ -115,7 +117,7 @@
                   <div class="meta">
                       <div class="upper-row">
                           <h3 class="job-title">Neural Networks in R studio using Keras & TensorFlow Certificate</h3>
-                          <div class="time">2020/04/05</div>
+                          <div class="time">Apr.2020</div>
 
                       </div><!--//upper-row-->
 
@@ -131,11 +133,11 @@
                   <div class="meta">
                       <div class="upper-row">
                           <h3 class="job-title">Requirement for the Android Pack Certificate</h3>
-                          <div class="time">april 2017</div>
+                          <div class="time">Apr.2017</div>
                       </div><!--//upper-row-->
 
                       <div class="company"><span class="text-info">Tehran Institute of Technology</span>
-                           <ul><li><a href="assets/images/AndroidPack.jpg">View Certificate</a></li></ul>
+                          <ul> <li><a href="assets/images/AndroidPack.jpg">View Certificate</a></li></ul>
                   </div></div><!--//meta-->
               </div>
 
@@ -143,7 +145,7 @@
                   <div class="meta">
                       <div class="upper-row">
                           <h3 class="job-title">Certificate of Achievement Honorable Mention</h3>
-                          <div class="time">Nov 2016</div>
+                          <div class="time">Nov.2016</div>
                       </div><!--//upper-row-->
 
                       <div class="company"><span class="text-info">university of guilan</span> , Rasht , Guilan , Iran
@@ -156,7 +158,7 @@
                   <div class="meta">
                       <div class="upper-row">
                           <h3 class="job-title">Received a full scholarship for B.Sc degree in computer engineering</h3>
-                          <div class="time">sep.2016</div>
+                          <div class="time">Sep.2016</div>
                       </div><!--//upper-row-->
 
                       <div class="company"><span class="text-info">university of guilan</span> , Rasht , Guilan , Iran
@@ -307,7 +309,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">DataBase Developer</h3>
-                            <div class="time">December 2019 - March 2020</div>
+                            <div class="time">Dec.2019 - Mar.2020</div>
                         </div><!--//upper-row-->
                         <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> Allame Helli 5 Highschool Website</strong></a>, Tehran, Iran
                 </div>
@@ -322,7 +324,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Internship</h3>
-                            <div class="time">july 2019 - September 2019</div>
+                            <div class="time">Jul.2019 - Sep.2019</div>
                         </div><!--//upper-row-->
                         <div class="company">IT Department ,
                 Moein Hotel ,
@@ -347,7 +349,7 @@
                         <div class="upper-row">
                             <h3 class="job-title">Member of Executive Committee</h3>
 
-                            <div class="time">November 14th</div>
+                            <div class="time">Nov.14th</div>
                         </div><!--//upper-row-->
                         <div class="company"><strong><span class="text-info">Guilan University Programming Contest 2019</span>, University of Guilan</strong> , Rasht , Iran</div>
 
@@ -359,14 +361,14 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Member and The Lead singer of <em class="text-info">Recitatif</em> music band</h3>
-                            <div class="time">spring of 2019 - Present</div>
+                            <div class="time">Mar.2019 - Present</div>
                         </div><!--//upper-row-->
                         <div class="company"><span class="text-info">Shaghayegh music academy</span>, Rasht , Iran</div>
                         <div class="company"><i class="fas fa-arrow-down"></i> <span class="text-info">Few of my performances</span></div>
                         <ul>
-                            <li><a href="https://www.instagram.com/p/BmJep8LnWKp/">Solo (Hello Cover)</a></li>
-                            <li><a href="https://www.instagram.com/p/B5nz6BRlJ5e/">Solo (I dont wanna be you Cover)</a></li>
-                            <li><a href="https://www.instagram.com/p/BwkpAsvlNIU/">Group Gathering practice performance</a></li>
+                            <li><a href="https://www.instagram.com/p/BmJep8LnWKp/" target="_blank">Solo (Hello Cover)</a></li>
+                            <li><a href="https://www.instagram.com/p/B5nz6BRlJ5e/" target="_blank">Solo (I dont wanna be you Cover)</a></li>
+                            <li><a href="https://www.instagram.com/p/BwkpAsvlNIU/" target="_blank">Group Gathering practice performance</a></li>
                             </li>
                         </ul>
                     </div><!--//meta-->
@@ -420,14 +422,14 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">VHDL</h3>
+                        <h3 class="level-title">HTML &amp; CSS</h3>
                         <div class="progress level-bar">
 						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
                     </div><!--//item-->
                     <!--//item-->
                     <div class="item">
-                        <h3 class="level-title">HTML &amp; CSS</h3>
+                        <h3 class="level-title">VHDL</h3>
                         <div class="progress level-bar">
                   <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -491,10 +493,10 @@
                         <div class="upper-row">
                             <h3 class="job-title">Dr. Asadollah Shahbahrami</h3>
                         </div><!--//upper-row-->
-                        <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> Associate Professor</strong></a>, Department of Computer Engineering , University of Guilan
+                        <div class="company"><a class="text-info"><strong> Associate Professor</strong></a>, Department of Computer Engineering , University of Guilan
                 </div>
-                <li class="email"><i class="fas fa-envelope"></i>   shahbahrami@guilan.ac.ir</li>
-                <li class="email"><i class="fas fa-envelope"></i>   shahbahrami1@gmail.com</li>
+                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: shahbahrami@guilan.ac.ir">   shahbahrami@guilan.ac.ir</a></li>
+                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: shahbahrami1@gmail.com">    shahbahrami1@gmail.com</a></li>
                         <li class="email"><i class="fas fa-globe"></i> <a href="https://staff.guilan.ac.ir/shahbahrami/" target="_blank">https://staff.guilan.ac.ir/shahbahrami/</a> </li>
 
                     </div>
@@ -504,9 +506,9 @@
                         <div class="upper-row">
                             <h3 class="job-title">Dr. Mahdi Aminian</h3>
                         </div><!--//upper-row-->
-                        <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan
+                        <div class="company"><a class="text-info"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan
                 </div>
-                <li class="email"><i class="fas fa-envelope"></i>   mahdi.aminian@guilan.ac.ir</li>
+                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: mahdi.aminian@guilan.ac.ir">  mahdi.aminian@guilan.ac.ir</a></li>
                         <li class="email"><i class="fas fa-globe"></i> <a href="https://staff.guilan.ac.ir/mahdiaminian/" target="_blank">https://staff.guilan.ac.ir/mahdiaminian/</a> </li>
 
                     </div>
