Web Development added!

--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
             <div class="contact-container container-block">
                  <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fas fa-envelope"></i><a href="mailto: asal.asgari19@gmail.com">asal.asgari19@gmail.com</a></li>
-
                      <li class="email"><i class="fas fa-globe"></i><a href="https://asal97.github.io/CV/" target="_blank"> https://asal97.github.io/CV/</a></li>
                      <li class="github"><i class="fab fa-github"></i><a href="https://github.com/asal97" target="_blank">github.com/asal97</a></li>
                      <li class="email"><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/asal-asgari-aa66a019a/" target="_blank"> Linkedin Account</a></li>
                      <br>
-                    <li class="email"><i class="fas fa-bookmark"></i> My academic project can be found in my github page make sure to check them out ^_^</li>
+                    <li class="email"><i class="fas fa-bookmark"></i>Visit my github for more information about my academic projects</li>
 
 
 
@@ -113,6 +112,28 @@
           <section class="section experiences-section">
               <h2 class="section-title"><span class="icon-holder"><i class="fas fa-award"></i></span>Certificates and Honors</h2>
 
+
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">Complete Responsive Web Development Certificate</h3>
+                          <div class="time">Apr.2020</div>
+
+                      </div><!--//upper-row-->
+
+                      <div class="company"><span class="text-info">Creative Online School</span>
+                          <a href="https://www.udemy.com/">, Udemy</a></span></li></ul>
+                          <ul><li>Completed 6 total hours of courses on html, css, bootstrap, JQuery</li>
+                              <li><a href="https://www.udemy.com/certificate/UC-5dd0b2bc-b36a-4db4-a755-e520cd13725d/" target="_blank">View Certificate</a></li></ul>
+
+                  </div></div><!--//meta-->
+              </div><!--//item-->
+
+<!--              <div class="company"><span class="text-info">Creative Online School</span>-->
+<!--                          <a href="https://www.udemy.com/">Complete Responsive Web Development Certificate, Udemy</a></span></li></ul>-->
+<!--                          <ul><li>Completed 6 total hours of courses on html, css ,bootstrap, JQuery </li>-->
+<!--                              <li><a href="https://www.udemy.com/certificate/UC-5dd0b2bc-b36a-4db4-a755-e520cd13725d/" target="_blank">View Certificate</a></li></ul>-->
+
               <div class="item">
                   <div class="meta">
                       <div class="upper-row">
@@ -124,7 +145,7 @@
                       <div class="company"><span class="text-info">Start-Tech Academy</span>
                           <a href="https://www.udemy.com/">, Udemy</a></span></li></ul>
                           <ul><li>Completed 8 total hours of Neural Networks in Rstudio using keras and TensorFlow online course </li>
-                              <li><a href="assets/images/photo_2020-04-05_15-40-51.jpg">View Certificate</a></li></ul>
+                              <li><a href="https://github.com/asal97/CV/blob/master/assets/images/photo_2020-04-05_15-40-51.jpg" target="_blank">View Certificate</a></li></ul>
 
                   </div></div><!--//meta-->
               </div><!--//item-->
@@ -137,7 +158,7 @@
                       </div><!--//upper-row-->
 
                       <div class="company"><span class="text-info">Tehran Institute of Technology</span>
-                          <ul> <li><a href="assets/images/AndroidPack.jpg">View Certificate</a></li></ul>
+                          <ul><li>Completed 70 total hours of Developing Android App in java language </li><li><a href="https://github.com/asal97/CV/blob/master/assets/images/AndroidPack.jpg">View Certificate</a></li></ul>
                   </div></div><!--//meta-->
               </div>
 
@@ -150,7 +171,7 @@
 
                       <div class="company"><span class="text-info">university of guilan</span> , Rasht , Guilan , Iran
                           <ul><li> Participated in <strong>15th</strong> Iran Internet Contest <span class="text-info"><strong>icpc</strong></span> foundation </li>
-                           <li><a href="assets/images/2017_CertificateTeamMedal_Asia_Iran_Internet_410149 (1).pdf">View Certificate</a></li></ul>
+                           <li><a href="https://github.com/asal97/CV/blob/master/assets/images/2017_CertificateTeamMedal_Asia_Iran_Internet_410149%20(1).pdf" target="_blank">View Certificate</a></li></ul>
                   </div></div><!--//meta-->
               </div>
 
@@ -281,11 +302,11 @@
                            </tr>
                          </thead>
                          <tbody>
-                           <tr class="bg-info">
-                             <td style="color:white;"> 2019/10/03 </td>
-                             <td style="color:white;">2019/12/08</td>
-                             <td style="color:white;">2019/10/01</td>
-                             <td style="color:white;">2019/12/10</td>
+                           <tr>
+                             <td>2019/10/03</td>
+                             <td>2019/12/08</td>
+                             <td>2019/10/01</td>
+                             <td>2019/12/10</td>
                            </tr>
                            <tr>
                              <td>70</td>
@@ -330,9 +351,11 @@
                 Moein Hotel ,
                 Fuman , Iran.
               </div>
-                <ul><li class="text-info"><strong>This program was an educational plan based on openCv (Open Source Computer Vision Library)
-     Which can be used to detect and recognize faces, track camera movements…
-</strong></li></ul>
+                <ul><li class="text-info">This program was an educational plan based on openCv (Open Source Computer Vision Library)
+     Which can be used to detect and recognize faces, track camera movements…</li>
+                    <br>
+                    <li class="text-info"><a href="https://github.com/asal97/opencv-practice" target="_blank"><strong> Tests and Practices Repository</strong></a></li>
+</ul>
                     </div>
                   </div>
 
@@ -353,7 +376,7 @@
                         </div><!--//upper-row-->
                         <div class="company"><strong><span class="text-info">Guilan University Programming Contest 2019</span>, University of Guilan</strong> , Rasht , Iran</div>
 
-                             <ul> <li><a href="assets/images/ExecutiveCommitte.jpg">View Certificate</a></li></ul>
+                             <ul> <li><a href="https://github.com/asal97/CV/blob/master/assets/images/ExecutiveCommitte.jpg" target="_blank">View Certificate</a></li></ul>
                     </div><!--//meta-->
                 </div><!--//item-->
 
@@ -484,7 +507,7 @@
                     </div>
 
                 </div>
-
+<br><br>
             </section><!--//skills-section-->
     <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-address-book"></i></span>Referee</h2>
