References web page updated!

--- a/index.html
+++ b/index.html
@@ -520,7 +520,8 @@
                 </div>
                         <li class="email"><i class="fas fa-envelope"></i><a href="mailto: shahbahrami@guilan.ac.ir">   shahbahrami@guilan.ac.ir</a></li>
                         <li class="email"><i class="fas fa-envelope"></i><a href="mailto: shahbahrami1@gmail.com">    shahbahrami1@gmail.com</a></li>
-                        <li class="email"><i class="fas fa-globe"></i> <a href="https://staff.guilan.ac.ir/shahbahrami/" target="_blank">https://staff.guilan.ac.ir/shahbahrami/</a> </li>
+                        <li class="email"><i class="fas fa-globe"></i> <a href="https://guilan.ac.ir/~shahbahrami" target="_blank">https://guilan.ac.ir/~shahbahrami</a> </li>
+
 
                     </div>
                   </div>
@@ -532,7 +533,8 @@
                         <div class="company"><a class="text-info"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan
                 </div>
                         <li class="email"><i class="fas fa-envelope"></i><a href="mailto: mahdi.aminian@guilan.ac.ir">  mahdi.aminian@guilan.ac.ir</a></li>
-                        <li class="email"><i class="fas fa-globe"></i> <a href="https://staff.guilan.ac.ir/mahdiaminian/" target="_blank">https://staff.guilan.ac.ir/mahdiaminian/</a> </li>
+                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: mhd.aminian@gmail.com">  mhd.aminian@gmail.com</a></li>
+                        <li class="email"><i class="fas fa-globe"></i> <a href="https://guilan.ac.ir/~mahdi.aminian" target="_blank">https://guilan.ac.ir/~mahdi.aminian</a> </li>
 
                     </div>
                   </div>
