--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Asal Asgari's CV">
-    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
+    <meta name="description" content="Asal Asgari CV (عسل عسگری) - دانشجوی مهندسی کامپیوتر - Computer Engineering Student">
+    <meta name="author" content="Asal Asgari (عسل عسگری)">
     <link rel="shortcut icon" href="favicon.ico">
     <!-- Google Font -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
@@ -33,7 +33,7 @@
             <!--//contact-container-->
             <div class="contact-container container-block">
                  <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fas fa-envelope"></i><a href="mailto: asal.asgari19@gmail.com">asal.asgari19@gmail.com</a></li>
+                     <li class="email"><i class="fas fa-envelope"></i><a href="mailto: asal.asgari19@gmail.com"> asal.asgari19@gmail.com</a></li>
                      <li class="email"><i class="fas fa-globe"></i><a href="https://asal97.github.io/CV/" target="_blank"> https://asal97.github.io/CV/</a></li>
                      <li class="github"><i class="fab fa-github"></i><a href="https://github.com/asal97" target="_blank">github.com/asal97</a></li>
                      <li class="email"><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/asal-asgari-aa66a019a/" target="_blank"> Linkedin Account</a></li>
@@ -75,7 +75,7 @@
                   <div class="meta">
                       <div class="upper-row">
                           <h3 class="job-title">B.Sc in Computer Engineering</h3>
-                          <div class="time">Sep.2016 - Jul.2020(Expected)</div>
+                          <div class="time">Sep.2016 - Aug.2020(Expected)</div>
                       </div><!--//upper-row-->
                       <div class="company"><strong>University of Guilan</strong> , Rasht , Iran
 <br>
@@ -113,6 +113,24 @@
               <h2 class="section-title"><span class="icon-holder"><i class="fas fa-award"></i></span>Certificates and Honors</h2>
 
 
+
+                  <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">Practical Machine Learning by Example in Python Certificate</h3>
+                          <div class="time">June.2020</div>
+
+                      </div><!--//upper-row-->
+
+                      <div class="company"><span class="text-info">Madhu Siddalingaiah</span>
+                          <a href="https://www.udemy.com/">, Udemy</a>
+                          <ul><li>Completed 8 total hours of Machine Learning in Python online course</li>
+                              <li><a href="https://www.udemy.com/certificate/UC-5c1e76cb-3bf1-4f98-a0c4-823dd6430fa9/" target="_blank">View Certificate</a></li></ul>
+
+                  </div></div><!--//meta-->
+              </div><!--//item-->
+
+
               <div class="item">
                   <div class="meta">
                       <div class="upper-row">
@@ -122,7 +140,7 @@
                       </div><!--//upper-row-->
 
                       <div class="company"><span class="text-info">Creative Online School</span>
-                          <a href="https://www.udemy.com/">, Udemy</a></span></li></ul>
+                          <a href="https://www.udemy.com/">, Udemy</a>
                           <ul><li>Completed 6 total hours of courses on html, css, bootstrap, JQuery</li>
                               <li><a href="https://www.udemy.com/certificate/UC-5dd0b2bc-b36a-4db4-a755-e520cd13725d/" target="_blank">View Certificate</a></li></ul>
 
@@ -143,7 +161,7 @@
                       </div><!--//upper-row-->
 
                       <div class="company"><span class="text-info">Start-Tech Academy</span>
-                          <a href="https://www.udemy.com/">, Udemy</a></span></li></ul>
+                          <a href="https://www.udemy.com/">, Udemy</a>
                           <ul><li>Completed 8 total hours of Neural Networks in Rstudio using keras and TensorFlow online course </li>
                               <li><a href="https://github.com/asal97/CV/blob/master/assets/images/photo_2020-04-05_15-40-51.jpg" target="_blank">View Certificate</a></li></ul>
 
@@ -249,7 +267,6 @@
                       </div><!--//meta-->
               </div><!--//item-->
 
-
           <!--//item-->
           </section>
 
@@ -323,7 +340,6 @@
           <!--//item-->
           </section>
 
-            </section>
             <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Experience</h2>
                 <div class="item">
@@ -392,7 +408,7 @@
                             <li><a href="https://www.instagram.com/p/BmJep8LnWKp/" target="_blank">Solo (Hello Cover)</a></li>
                             <li><a href="https://www.instagram.com/p/B5nz6BRlJ5e/" target="_blank">Solo (I dont wanna be you Cover)</a></li>
                             <li><a href="https://www.instagram.com/p/BwkpAsvlNIU/" target="_blank">Group Gathering practice performance</a></li>
-                            </li>
+
                         </ul>
                     </div><!--//meta-->
                 </div><!--//item-->
@@ -507,7 +523,7 @@
                     </div>
 
                 </div>
-<br><br>
+
             </section><!--//skills-section-->
     <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-address-book"></i></span>Referee</h2>
@@ -518,10 +534,11 @@
                         </div><!--//upper-row-->
                         <div class="company"><a class="text-info"><strong> Associate Professor</strong></a>, Department of Computer Engineering , University of Guilan
                 </div>
+                        <ul>
                         <li class="email"><i class="fas fa-envelope"></i><a href="mailto: shahbahrami@guilan.ac.ir">   shahbahrami@guilan.ac.ir</a></li>
                         <li class="email"><i class="fas fa-envelope"></i><a href="mailto: shahbahrami1@gmail.com">    shahbahrami1@gmail.com</a></li>
                         <li class="email"><i class="fas fa-globe"></i> <a href="https://guilan.ac.ir/~shahbahrami" target="_blank">https://guilan.ac.ir/~shahbahrami</a> </li>
-
+                        </ul>
 
                     </div>
                   </div>
@@ -532,10 +549,11 @@
                         </div><!--//upper-row-->
                         <div class="company"><a class="text-info"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan
                 </div>
+                        <ul>
                         <li class="email"><i class="fas fa-envelope"></i><a href="mailto: mahdi.aminian@guilan.ac.ir">  mahdi.aminian@guilan.ac.ir</a></li>
                         <li class="email"><i class="fas fa-envelope"></i><a href="mailto: mhd.aminian@gmail.com">  mhd.aminian@gmail.com</a></li>
                         <li class="email"><i class="fas fa-globe"></i> <a href="https://guilan.ac.ir/~mahdi.aminian" target="_blank">https://guilan.ac.ir/~mahdi.aminian</a> </li>
-
+                        </ul>
                     </div>
                   </div>
 
