--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Asal Asgari CV (عسل عسگری) - دانشجوی مهندسی کامپیوتر - Computer Engineering Student">
-    <meta name="author" content="Asal Asgari (عسل عسگری)">
+    <meta name="description" content="Asal Asgari's CV">
+    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
     <link rel="shortcut icon" href="favicon.ico">
     <!-- Google Font -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
@@ -111,26 +111,43 @@
           <!--//item-->
           <section class="section experiences-section">
               <h2 class="section-title"><span class="icon-holder"><i class="fas fa-award"></i></span>Certificates and Honors</h2>
-
-
-
+<!--              <h3 class="job-title"><strong>Artificial Intelligence and Machine Learning</strong></h3>-->
+<!--              <br>-->
+<!--              <ul>-->
                   <div class="item">
                   <div class="meta">
                       <div class="upper-row">
-                          <h3 class="job-title">Practical Machine Learning by Example in Python Certificate</h3>
+                          <h3 class="job-title">Task-Oriented Course in Artificial Intelligence and Machine Learning</h3>
                           <div class="time">June.2020</div>
 
                       </div><!--//upper-row-->
 
-                      <div class="company"><span class="text-info">Madhu Siddalingaiah</span>
-                          <a href="https://www.udemy.com/">, Udemy</a>
-                          <ul><li>Completed 8 total hours of Machine Learning in Python online course</li>
-                              <li><a href="https://www.udemy.com/certificate/UC-5c1e76cb-3bf1-4f98-a0c4-823dd6430fa9/" target="_blank">View Certificate</a></li></ul>
+                      <div class="company">
+                          <a href="https://quera.ir/">Quera</a>
+                          <ul>
+                              <li><a href="https://quera.ir/certificate/uJohtVw9/" target="_blank">View Certificate</a></li></ul>
 
                   </div></div><!--//meta-->
               </div><!--//item-->
 
 
+                  <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">Neural Networks in R studio using Keras & TensorFlow Certificate</h3>
+                          <div class="time">Apr.2020</div>
+
+                      </div><!--//upper-row-->
+
+                      <div class="company">
+                          <a href="https://www.udemy.com/course/neural-network-understanding-and-building-an-ann-in-r/">Udemy</a>
+                          <ul><li>Completed 8 total hours of Neural Networks in Rstudio using keras and TensorFlow online course </li>
+                              <li><a href="https://www.udemy.com/certificate/UC-130e6730-9a3c-46bd-a36c-e15919ced61a/" target="_blank">View Certificate</a></li></ul>
+
+                  </div></div><!--//meta-->
+              </div><!--//item-->
+
+<!--</ul>-->
               <div class="item">
                   <div class="meta">
                       <div class="upper-row">
@@ -139,8 +156,8 @@
 
                       </div><!--//upper-row-->
 
-                      <div class="company"><span class="text-info">Creative Online School</span>
-                          <a href="https://www.udemy.com/">, Udemy</a>
+                      <div class="company">
+                          <a href="https://www.udemy.com/course/responsive-web-development/">Udemy</a>
                           <ul><li>Completed 6 total hours of courses on html, css, bootstrap, JQuery</li>
                               <li><a href="https://www.udemy.com/certificate/UC-5dd0b2bc-b36a-4db4-a755-e520cd13725d/" target="_blank">View Certificate</a></li></ul>
 
@@ -152,21 +169,7 @@
 <!--                          <ul><li>Completed 6 total hours of courses on html, css ,bootstrap, JQuery </li>-->
 <!--                              <li><a href="https://www.udemy.com/certificate/UC-5dd0b2bc-b36a-4db4-a755-e520cd13725d/" target="_blank">View Certificate</a></li></ul>-->
 
-              <div class="item">
-                  <div class="meta">
-                      <div class="upper-row">
-                          <h3 class="job-title">Neural Networks in R studio using Keras & TensorFlow Certificate</h3>
-                          <div class="time">Apr.2020</div>
 
-                      </div><!--//upper-row-->
-
-                      <div class="company"><span class="text-info">Start-Tech Academy</span>
-                          <a href="https://www.udemy.com/">, Udemy</a>
-                          <ul><li>Completed 8 total hours of Neural Networks in Rstudio using keras and TensorFlow online course </li>
-                              <li><a href="https://github.com/asal97/CV/blob/master/assets/images/photo_2020-04-05_15-40-51.jpg" target="_blank">View Certificate</a></li></ul>
-
-                  </div></div><!--//meta-->
-              </div><!--//item-->
 
               <div class="item">
                   <div class="meta">
@@ -211,7 +214,7 @@
 
           <section class="section experiences-section">
               <h2 class="section-title"><span class="icon-holder"><i class="fas fa-award"></i></span>Research Interests</h2>
-
+<ul>
               <div class="item">
                   <div class="meta">
                       <div class="upper-row">
@@ -266,6 +269,8 @@
                       </div><!--//upper-row-->
                       </div><!--//meta-->
               </div><!--//item-->
+    </ul>
+
 
           <!--//item-->
           </section>
@@ -349,10 +354,14 @@
                             <div class="time">Dec.2019 - Mar.2020</div>
                         </div><!--//upper-row-->
                         <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> Allame Helli 5 Highschool Website</strong></a>, Tehran, Iran
-                </div>
+                <br>
+                            <span style="margin-right: 3px" class="badge badge-secondary">sqlite3</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">Git</span>
+                        </div>
                 <ul><li class="text-info"><strong>
                    <a href="https://github.com/TheMn/internet-engineering-project">Project Repository</a>
                 </strong></li></ul>
+
                     </div>
                   </div>
 
@@ -366,6 +375,10 @@
                         <div class="company">IT Department ,
                 Moein Hotel ,
                 Fuman , Iran.
+                            <br>
+                            <span style="margin-right: 3px" class="badge badge-secondary">openCV</span>
+                            <span style="margin-right: 3px" class="badge badge-secondary">python</span>
+
               </div>
                 <ul><li class="text-info">This program was an educational plan based on openCv (Open Source Computer Vision Library)
      Which can be used to detect and recognize faces, track camera movements…</li>
@@ -375,7 +388,7 @@
                     </div>
                   </div>
 
-                
+
 
   <!--//item-->
 
@@ -427,45 +440,54 @@
                   <!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Python </h3>
+                        <h3 class="level-title">Python</h3>
                         <div class="progress level-bar">
 						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
+                        <span style="margin-right: 3px" class="badge badge-secondary">Django</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">nltk</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">scikit-learn</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">matplotplib</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">openCV</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">Numpy</span>
+                         <span style="margin-right: 3px" class="badge badge-secondary">Pandas</span>
                     </div><!--//item-->
 
+                     <div class="item">
+                        <h3 class="level-title">Web Development Tools</h3>
+                        <div class="progress level-bar">
+						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 70%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+						</div>
+                          <span style="margin-right: 3px" class="badge badge-secondary">HTML</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">CSS</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">Bootstrap</span>
+                          <span style="margin-right: 3px" class="badge badge-secondary">javascript</span>
+                          <span style="margin-right: 3px" class="badge badge-secondary">JQuery</span>
+                    </div>
                     <div class="item">
                         <h3 class="level-title">Java</h3>
                         <div class="progress level-bar">
-                    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 65%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
+                           <span style="margin-right: 3px" class="badge badge-secondary">Android</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">Java Cup</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">Java Swing</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">JUnit</span>
+
+
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">sqlite3</h3>
+                        <h3 class="level-title">Database Tools</h3>
                         <div class="progress level-bar">
 						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
-                    </div>
-                     <div class="item">
-                        <h3 class="level-title">MySQL</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
+                         <span style="margin-right: 3px" class="badge badge-secondary">sqlite3</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">MySQL</span>
                     </div>
 
-                    <div class="item">
-                        <h3 class="level-title">C++</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
-                    </div>
 
-                    <div class="item">
-                        <h3 class="level-title">HTML &amp; CSS</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
-                    </div><!--//item-->
+                    <!--//item-->
                     <!--//item-->
                     <div class="item">
                         <h3 class="level-title">VHDL</h3>
@@ -475,38 +497,12 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Android</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
-                    </div><!--//item-->
-
-                       <div class="item">
-                        <h3 class="level-title">Vala</h3>
-                        <div class="progress level-bar">
-                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                    </div>
-
-                    <div class="item">
-                        <h3 class="level-title">Proteus</h3>
-                        <div class="progress level-bar">
-                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                    </div><!--//item-->
-                    <div class="item">
                         <h3 class="level-title">Prolog</h3>
                         <div class="progress level-bar">
                 <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
                     </div>
 
-                    <div class="item">
-                        <h3 class="level-title">Javascript</h3>
-                        <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-                    </div>
 
                     <div class="item">
                         <h3 class="level-title">Assembly</h3>
@@ -523,7 +519,7 @@
                     </div>
 
                 </div>
-
+<br><br>
             </section><!--//skills-section-->
     <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-address-book"></i></span>Referee</h2>
