Relevant Courses and bachelor Project Added

--- a/index.html
+++ b/index.html
@@ -80,6 +80,31 @@
                       <div class="company"><strong>University of Guilan</strong> , Rasht , Iran
 <br>
 <ul><li class="text-info"><strong>GPA :16.53/20 </strong>(Preliminary)</li></ul>
+<h3 class="job-title">Bachelors Thesis Project</h3>
+<div class="company"><a class="text-info" ><strong> ALPR Plate Recognition and Supervision Website</strong></a>
+                <br>
+
+
+
+                            <span style="margin-right: 3px" class="badge badge-secondary">python</span>
+                            <span style="margin-right: 3px" class="badge badge-secondary">Django</span>
+                          <span style="margin-right: 3px" class="badge badge-secondary">Git</span>
+                          <span style="margin-right: 3px" class="badge badge-secondary">Sqlite3</span>
+                          <span style="margin-right: 3px" class="badge badge-secondary">html</span>
+                          <span style="margin-right: 3px" class="badge badge-secondary">css</span>
+                          <span style="margin-right: 3px" class="badge badge-secondary">JQuery</span>
+ </div>
+                          <ul>
+                              <li>Implemented a Supervision Website for a Plate Detector
+                                  System which is
+                                  currently used in many universities in <strong>Guilan Province</strong> including
+                                  <strong>College of Technical and Vocational Chamran</strong></li>
+
+                             <li class="text-info"><strong>
+                   <a href="https://github.com/asal97/Computer-Vision-Project">Project Repository</a>
+                </strong></li>
+                          </ul>
+
 </div>
                   </div><!--//meta-->
 
@@ -106,7 +131,24 @@
 <!--//item-->
 
           </section><!--//section-->
+ <section class="section experiences-section">
+              <h2 class="section-title"><span class="icon-holder"><i class="fas fa-book-open"></i></span>Relevant Courses</h2>
+<ul>
 
+                            <li class="job-title">Principles of Database Design : 19.5/20</li>
+                             <li class="job-title">Internet Engineering : 20/20</li>
+                             <li class="job-title">The Theory of Formal Languages and Automata : 18.75/20</li>
+                             <li class="job-title">Artificial Intelligence and Expert Systems : 17.15/20</li>
+                             <li class="job-title">Advanced Programming : 17.20/20</li>
+
+
+
+
+    </ul>
+
+
+          <!--//item-->
+          </section>
 
           <!--//item-->
           <section class="section experiences-section">
@@ -215,60 +257,17 @@
           <section class="section experiences-section">
               <h2 class="section-title"><span class="icon-holder"><i class="fas fa-award"></i></span>Research Interests</h2>
 <ul>
-              <div class="item">
-                  <div class="meta">
-                      <div class="upper-row">
-                          <h3 class="job-title">•	Intelligent Software Systems</h3>
+               <li class="job-title">Intelligent Software Systems</li>
+                <li class="job-title">Cognitive Science</li>
+                <li class="job-title">Information and Database Systems</li>
+                <li class="job-title">Computer Vision and Pattern Recognition</li>
+                <li class="job-title">Linguistics and Computational Linguistics</li>
+                <li class="job-title">Machine learning</li>
+                <li class="job-title">Human-Computer Interaction</li>
 
-                      </div><!--//upper-row-->
-                      </div><!--//meta-->
-              </div><!--//item-->
-              <div class="item">
-                  <div class="meta">
-                      <div class="upper-row">
-                          <h3 class="job-title">•	Cognitive Science</h3>
-                      </div><!--//upper-row-->
-                      </div><!--//meta-->
-              </div><!--//item-->
 
-              <div class="item">
-                  <div class="meta">
-                      <div class="upper-row">
-                          <h3 class="job-title">•	information and database systems</h3>
-                      </div><!--//upper-row-->
-                      </div><!--//meta-->
-              </div><!--//item-->
 
-              <div class="item">
-                  <div class="meta">
-                      <div class="upper-row">
-                          <h3 class="job-title">•	Computer Vision and Pattern Recognition</h3>
-                      </div><!--//upper-row-->
-                      </div><!--//meta-->
-              </div><!--//item-->
-              <div class="item">
-                  <div class="meta">
-                      <div class="upper-row">
-                          <h3 class="job-title">•	Linguistics and Computational Linguistics</h3>
-                      </div><!--//upper-row-->
-                      </div><!--//meta-->
-              </div><!--//item-->
 
-              <div class="item">
-                  <div class="meta">
-                      <div class="upper-row">
-                          <h3 class="job-title">•	Machine learning</h3>
-                      </div><!--//upper-row-->
-                      </div><!--//meta-->
-              </div><!--//item-->
-
-              <div class="item">
-                  <div class="meta">
-                      <div class="upper-row">
-                          <h3 class="job-title">•	Human-Computer Interaction</h3>
-                      </div><!--//upper-row-->
-                      </div><!--//meta-->
-              </div><!--//item-->
     </ul>
 
 
@@ -413,7 +412,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Member and The Lead singer of <em class="text-info">Recitatif</em> music band</h3>
-                            <div class="time">Mar.2019 - Present</div>
+                            <div class="time">Mar.2019 - Mar.2020</div>
                         </div><!--//upper-row-->
                         <div class="company"><span class="text-info">Shaghayegh music academy</span>, Rasht , Iran</div>
                         <div class="company"><i class="fas fa-arrow-down"></i> <span class="text-info">Few of my performances</span></div>
@@ -423,8 +422,10 @@
                             <li><a href="https://www.instagram.com/p/BwkpAsvlNIU/" target="_blank">Group Gathering practice performance</a></li>
 
                         </ul>
+                         <div class="company"><i class="fab fa-soundcloud"></i> <span class="text-info"><a href="https://soundcloud.com/meli-plays">Listen to few of my performances on soundcloud</a> </span></div>
+
                     </div><!--//meta-->
-                </div><!--//item-->
+                     </div><!--//item-->
 
 
 
